libs/@local/hashql/hir/tests/ui/lower/inference/unsatisfiable-upper-constraint.jsonc
//@ run: fail
//@ description: Test unsatisfiable upper constraint during inference
[
  "input",
  "x",
  "Number",
  { "#literal": "42", "#type": "_" }
  //~^ ERROR Type variable has incompatible upper and lower bounds
]
